<resources>
    <string name="app_name">Game Edukasi Anak Islami</string>
    <string name="ip_address">192.168.1.6</string>
    <string name="start">mulai</string>
    <string name="settings">pengaturan</string>
    <string name="about">tentang</string>
    <string name="exit">keluar</string>
    <string name="quiz_letter_title">tebak - tebakan huruf hijaiyah</string>
    <string name="quiz_number_title">tebak - tebakan angka</string>
    <string name="learn_letter_title">Belajar Huruf Hijaiyah</string>
    <string name="learn_number_title">Belajar Angka</string>
    <string name="game_title">Tebak - Tebakan %1$s</string>
    <string name="correct_count">Benar:%1$d</string>
    <string name="question_position">%1$d/%2$d</string>
    <string name="wrong_count">Salah:%1$d</string>
    <string name="question">Pertanyaan</string>
    <string name="quiz_result_title">Selamat Kamu Telah Berhasil Menyelesaikan
        Tebak - Tebakan %1$s!</string>
    <string name="quiz_score"><u>%1$d</u></string>
    <string name="about_name_nim">Dikembangkan Oleh :\n Gio Vani\n<font size="20">1811500103</font></string>
    <string name="university">ISB ATMALUHUR PANGKALPINANG</string>
    <string name="address">Jl. Jendral Sudirman, Kel. Selindung Baru, Kec. Pangkal Balam, Pangkal Pinang, Kepulauan Bangka Belitung</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homebutton">homeButton</string>
</resources>