<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".HomeFragment">

    <TextView
        style="@style/TextAppearance.MaterialComponents.Headline3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="100dp"
        android:shadowColor="?colorPrimary"
        android:shadowDx="8"
        android:shadowDy="8"
        android:shadowRadius="10"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="?colorSecondary"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:backgroundTint="@color/indigo_800"
            android:padding="6dp"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:backgroundTint="@color/indigo_800"
            android:padding="6dp"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/about_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:backgroundTint="@color/indigo_800"
            android:padding="6dp"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:backgroundTint="@color/indigo_800"
            android:padding="6dp"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>