<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".StartMenuFragment">

    <Button
        android:id="@+id/game_letter_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="?colorSecondary"
        android:paddingVertical="30dp"
        android:text="@string/quiz_letter_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/game_number_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/game_number_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="?colorSecondary"
        android:paddingVertical="30dp"
        android:text="@string/quiz_number_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/game_letter_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/learn_letter_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="6dp"
        android:backgroundTint="?colorSecondary"
        android:paddingVertical="30dp"
        android:text="@string/learn_letter_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/learn_number_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_letter_button" />

    <Button
        android:id="@+id/learn_number_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="6dp"
        android:backgroundTint="?colorSecondary"
        android:paddingVertical="30dp"
        android:text="@string/learn_number_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/learn_letter_button"
        app:layout_constraintTop_toBottomOf="@id/game_number_button" />

</androidx.constraintlayout.widget.ConstraintLayout>