<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingHorizontal="20dp"
    android:paddingTop="30dp"
    android:paddingBottom="20dp"
    tools:context=".QuizActivity">

    <LinearLayout
        android:id="@+id/background_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/background_title"
        android:gravity="center"
        android:paddingHorizontal="50dp"
        android:paddingVertical="40dp">

        <TextView
            android:id="@+id/gameTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/game_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/home_button"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/background_title"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_question"
        android:gravity="center"
        android:paddingHorizontal="50dp"
        android:paddingVertical="60dp"
        android:text="@string/question"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/questionWidget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question_text"
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <TextView
            android:id="@+id/correct_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_box_small"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/correct_count"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/question_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_weight="1"
            android:background="@drawable/background_box_small"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/question_position"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/wrong_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_box_small"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/wrong_count"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/questionWidget"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/option_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/option_button"
                android:button="@null"
                android:fontFamily="@font/aladin"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="50sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@+id/option_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/option_button"
                android:button="@null"
                android:fontFamily="@font/aladin"
                android:gravity="center"

                android:textColor="@color/white"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/option_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/option_button"
                android:button="@null"
                android:fontFamily="@font/aladin"
                android:gravity="center"

                android:textColor="@color/white"
                android:textSize="50sp" />

            <RadioButton
                android:id="@+id/option_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/option_button"
                android:button="@null"
                android:fontFamily="@font/aladin"
                android:gravity="center"

                android:textColor="@color/white"
                android:textSize="50sp" />
        </LinearLayout>
    </RadioGroup>


</RelativeLayout>